<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:textSize="20dp"
            android:text="@string/requirements_before_use_this_app"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iva"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/crosss"
            ></ImageView>

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/textViewa"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_enabled" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivb"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/crosss"
                ></ImageView>

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/textViewb"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_permissions" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivc"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/crosss"
                ></ImageView>

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/textViewc"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_enabled" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/continuebutton"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="#dcdcdc"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:id="@+id/btntext"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuex" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>